syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message Operation {
  int64 first_number = 1;
  int64 second_number = 2;
}

message CalculatorRequest { Operation operation = 1; }

message CalculatorResponse { int64 result = 1; }

message PrimeNumberDecompositionRequest { int64 number = 1; }

message PrimeNumberDecompositionResponse { int64 result = 1; }

message CalculateAverageRequest { int64 number = 1; }

message CalculateAverageResponse { double result = 1; }

message FindMaximumRequest { int64 number = 1; }

message FindMaximumResponse { int64 result = 1; }

message SquareRootRequest { int64 number = 1; }

message SquareRootResponse { double number_root = 1; }

service CalculatorService {
  // Unary
  rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};

  // Streaming Server
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
      returns (stream PrimeNumberDecompositionResponse) {};

  // Streaming Client
  rpc CalculateAverage(stream CalculateAverageRequest)
      returns (CalculateAverageResponse) {};

  // BiDi Client
  rpc FindMaximum(stream FindMaximumRequest)
      returns (stream FindMaximumResponse) {};

  // error handling
  // This RPC will throw an exception if the sent number is negative
  // The error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
